[project]
name = "geoconverter"
dynamic = ["version"]
description = "A tool to convert geospatial data formats"
authors = [
    {name = "sotberd", email = "sotiriosn.berdes@gmail.com"},
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pre-commit<5.0.0,>=2.17.0",
    "typer >= 0.12.3",
    "rich-toolkit >= 0.11.1",
    "geopandas==0.13.0",
    "numpy==1.26.4",
    "fiona==1.9.5",
    "pytest<9.0.0,>=4.4.0",
    "coverage[toml]<8.0,>=6.2",
    "mypy==1.14.0",
    "ruff==0.8.4",
]

[project.urls]
Repository = "https://github.com/sotberd/geoconverter"

[project.scripts]
geoconverter = "geoconverter.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = { source = "file", path = "src/geoconverter/__init__.py" }
distribution = true

[tool.pdm.build]
source-includes = [
    "tests/",
    "requirements*.txt",
    "scripts/",
    ]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
xfail_strict = true
junit_family = "xunit2"

[tool.coverage.run]
parallel = true
data_file = "coverage/.coverage"
source = [
    "src",
    "tests",
]
context = '${CONTEXT}'
dynamic_context = "test_function"
omit = [
    "tests/assets/*",
]

[tool.coverage.report]
show_missing = true
sort = "-Cover"
exclude_lines = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
show_contexts = true

[tool.mypy]
strict = true
exclude = [
    "tests/assets/*",
]
ignore_missing_imports = true


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191", # indentation contains tabs
]

# [tool.ruff.lint.per-file-ignores]
# "__init__.py" = ["F401"]


[tool.ruff.lint.isort]
known-third-party = ["typer", "rich", "geopandas", "numpy", "fiona"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
[dependency-groups]
dev = [
    "-e file:///${PROJECT_ROOT}/#egg=geoconverter",
    "-e file:///${PROJECT_ROOT}/#egg=geoconverter",
]
